# task-approval-mgmt

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Question.md  README.md  pyproject.toml
app/: main.py
app/exceptions/: __init__.py  handlers.py  task_exceptions.py
app/middleware/: __init__.py  logging_middleware.py
app/models/: task.py
app/repository/: base.py  task_repository.py
app/routers/: tasks.py
app/schemas/: responses.py  task.py
app/services/: task_service.py
app/utils/: constants.py
config/: logging.ini
tests/: test_tasks.py
